bug fixes and swagger updated for localhost
